--- a/docs/make_gam_hypothesis.Rmd
+++ b/docs/make_gam_hypothesis.Rmd
@@ -123,6 +123,8 @@ downstream <- alldata %>% filter(region == "below")
 upstream <- alldata %>% filter(region == "above")
 yolo <- alldata %>% filter(region == "yolo")
 ```
+
+
 ## Scale datasets
 ```{r}
 d.idys <- downstream %>%
@@ -136,7 +138,17 @@ yo.idys <- yolo %>%
 # Model
 
 ## Run Models
+
 ### Upstream
+
+Still being run on scaled data, not original data
+To decide whether to use WTmwk, Sradmwk or dowy for the time/seasonal component
+To decide whether to use inundation days or inundation flag or inundation factor
+1. inundation days (log_idys) is duration of inundation up to the day of observation
+2. inundationn is 0 if not inundated; 1 if inundated
+3. inund_fac  is "none" if no inundation; "short" if inundation < 2wk; "long" if inundation > 2wk
+4. inund_fac2 is "none" if no inundation; "short" if inundation < 3wk; "long" if inundation > 3wk
+
 ```{r}
 gamu1 <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inundation), method = "REML", data = u.idys, family = "gaussian")
 summary(gamu1)
@@ -150,22 +162,26 @@ summary(gamu3)
 gamu4 <- gam(log_chla ~ te(log_idys, WTmwk, by = inundation), method = "REML", data = u.idys, family = "gaussian")
 summary(gamu4)
 
-
 gamu5 <- gam(log_chla ~ te(log_qsdy, Sradmwk, by = inund_fac2), method = "REML", data = u.idys, family = "gaussian")
 
 ######################
 gamu6 <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = u.idys, family = "gaussian")
 summary(gamu6)
 
+# the final model run on non-scaled data (best model is actually gamu4 for upstream)
+# final chosen covars are log_qsdy, WTmwk and inund_fac2
 gamu6b <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = upstream, family = "gaussian")
 summary(gamu6b)
 
+# final model with random effect for station
+gamu6c <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2) + s(station, bs = "re"), method = "REML", data = upstream, family = "gaussian")
+summary(gamu6c)
+gam.vcomp(gamu6c)
 ######################
 
-AIC(gamu1, gamu2, gamu3, gamu4, gamu6)
-
-
+AIC(gamu1, gamu2, gamu3, gamu4, gamu6, gamu6b, gamu6c)
 ```
+
 
 ### Yolo
 ```{r}
@@ -188,12 +204,18 @@ summary(gamyo5)
 gamyo6 <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = yo.idys, family = "gaussian")
 summary(gamyo6)
 
-#######################
+# the final model  run on non-scaled data (best model is this one)
+# final chosen covars are log_qsdy, WTmwk and inund_fac2
 gamyo6b <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = yolo, family = "gaussian")
-summary(gamyo6)
+summary(gamyo6b)
+
+# final model with random effect for station
+gamyo6c <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2) + s(station, bs = "re"), method = "REML", data = yolo, family = "gaussian")
+summary(gamyo6c)
+gam.vcomp(gamyo6c)
 ######################
 
-AIC(gamyo1, gamyo2, gamyo3, gamyo4, gamyo5, gamyo6)
+AIC(gamyo1, gamyo2, gamyo3, gamyo4, gamyo5, gamyo6, gamyo6b, gamyo6c)
 ```
 
 ### Downstream
@@ -214,18 +236,26 @@ summary(gamd4)
 gamd6 <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = d.idys, family = "gaussian")
 summary(gamd6)
 
+# the final model  run on non-scaled data (best model is this one)
+# final chosen covars are log_qsdy, WTmwk and inund_fac2
 gamd6b <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = downstream, family = "gaussian")
 summary(gamd6b)
+
+# with station random effect
+gamd6c <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2) + s(station, bs = "re"), method = "REML", data = downstream, family = "gaussian")
+summary(gamd6c)
+gam.vcomp(gamd6c)
 #####################
 
-AIC(gamd1, gamd2, gamd3, gamd4, gamd6)
+AIC(gamd1, gamd2, gamd3, gamd4, gamd6, gamd6b, gamd6c)
 ```
 
 ## Validation
 
 gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = u.idys, family = "gaussian")
 
-### gamd6
+### gamd6 - downstream model validation
+
 ```{r}
   # validate the final model by plotting residuals and save to a tiff
   png(filename = "figures/gamd6.tiff", width = 7, height = 9, units = "in", res = 200)
@@ -245,8 +275,10 @@ gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = u.i
   dev.off()
 ```
 
-### gamu6
+### gamu6 - upstream model validation
+
 * some minor autocorrelation at t-1
+
 ```{r}
   # validate the final model by plotting residuals and save to a tiff
   png(filename = "figures/gamu6.tiff", width = 7, height = 9, units = "in", res = 200)
@@ -268,7 +300,8 @@ gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = u.i
   pacf(resid)
 ```
 
-### gamyo6
+### gamyo6 - Yolo model validation
+
 ```{r}
   # validate the final model by plotting residuals and save to a tiff
   png(filename = "figures/gamyo6.tiff", width = 7, height = 9, units = "in", res = 200)
@@ -290,57 +323,220 @@ gam(log_chla ~ te(log_qsdy, WTmwk, by = inund_fac2), method = "REML", data = u.i
   pacf(resid)
 ```
 
+
 # Predict/Visualize data
 
 * chlorophyll vs flow 5% WT, 95% WT
 * chlorophyll vs WT 5% flow, 95% flow
 
 ## Downstream
+
 ### PREDICT
+
 ```{r}
+
 library(tidymv)
 
 # Get values 
 (d_table <- downstream %>%
   group_by(inund_fac2)%>%
- summarize(minQ = quantile(log_qsdy, 0.05),
+  summarize(minQ = quantile(log_qsdy, 0.05),
             maxQ = quantile(log_qsdy, 0.95),
             minWT = quantile(WTmwk, 0.05),
             maxWT = quantile(WTmwk, 0.95)) %>%
   ungroup() %>%
   as.data.frame())
 
+# divide all covars into this many intervals in simulated dataset
+grid.size = 49
+# calculate interval size for all 3 inundation factor simulation datasets
+int.none.lqsdy = (d_table[2,3] - d_table[2,2])/(grid.size)
+int.none.wtmwk = (d_table[2,5] - d_table[2,4])/(grid.size)
+int.shrt.lqsdy = (d_table[3,3] - d_table[3,2])/(grid.size)
+int.shrt.wtmwk = (d_table[3,5] - d_table[3,4])/(grid.size)
+int.long.lqsdy = (d_table[1,3] - d_table[1,2])/(grid.size)
+int.long.wtmwk = (d_table[1,5] - d_table[1,4])/(grid.size)
+
+seq.none.lqsdy = seq(d_table[2,2], d_table[2,3], by = int.none.lqsdy)
+seq.none.wtmwk = seq(d_table[2,4], d_table[2,5], by = int.none.wtmwk)
+seq.shrt.lqsdy = seq(d_table[3,2], d_table[3,3], by = int.shrt.lqsdy)
+seq.shrt.wtmwk = seq(d_table[3,4], d_table[3,5], by = int.shrt.wtmwk)
+seq.long.lqsdy = seq(d_table[1,2], d_table[1,3], by = int.long.lqsdy)
+seq.long.wtmwk = seq(d_table[1,4], d_table[1,5], by = int.long.wtmwk)
 
 # Prediction datasets - Downstream (unscaled)
-pred_gamd6_none <- predict_gam(gamd6b, values = list(log_qsdy = seq(d_table[2,2], d_table[2,3], by = 0.08),
-                                                    WTmwk = seq(d_table[2,4],d_table[2,5], by = 0.1),
-                                                    inund_fac2 = "none"))
-pred_gamd6_short <- predict_gam(gamd6b, values = list(log_qsdy = seq(d_table[3,2], d_table[3,3], by = 0.05),
-                                                    WTmwk = seq(d_table[3,4], d_table[3,5], by = 0.1),
-                                                    inund_fac2 = "short"))
-pred_gamd6_long <- predict_gam(gamd6b, values = list(log_qsdy = seq(d_table[1,2], d_table[1,3], by = 0.05),
-                                                    WTmwk = seq(d_table[1,4], d_table[1,5], by = 0.1),
-                                                    inund_fac2 = "long"))
-    
+pred_gamd6_none  <- predict_gam(gamd6b, values = list(log_qsdy = seq(d_table[2,2], d_table[2,3], by = int.none.lqsdy),
+                                                         WTmwk = seq(d_table[2,4], d_table[2,5], by = int.none.wtmwk),
+                                                         inund_fac2 = "none"))
+pred_gamd6_short <- predict_gam(gamd6b, values = list(log_qsdy = seq(d_table[3,2], d_table[3,3], by = int.shrt.lqsdy),
+                                                         WTmwk = seq(d_table[3,4], d_table[3,5], by = int.shrt.wtmwk),
+                                                         inund_fac2 = "short"))
+pred_gamd6_long  <- predict_gam(gamd6b, values = list(log_qsdy = seq(d_table[1,2], d_table[1,3], by = int.long.lqsdy),
+                                                         WTmwk = seq(d_table[1,4], d_table[1,5], by = int.long.wtmwk),
+                                                         inund_fac2 = "long"))
+
+# combine all three inundation factor predictions into one data frame    
 pred_downstream <- rbind(pred_gamd6_short, pred_gamd6_long, pred_gamd6_none)
+# set the order of factors for inund_fac2
 pred_downstream$inund_fac2 <- factor(pred_downstream$inund_fac2, levels = c("none", "short", "long"))
+
 ```
 
-###VISUALIZE
+### VISUALIZE
+
 ```{r}
-png(filename = "figures/downstream_predictions.png", width = 10, height = 4, units = "in", res = 300)
-(downstream_plots <- pred_downstream %>%
-  ggplot(aes(WTmwk, fit, color = log_qsdy)) +
-  geom_point(size = 0.5) +
-  geom_smooth() + 
-  #geom_smooth_ci(WTmwk, size = 1.5) +
-  facet_wrap(~inund_fac2) +
-  scale_color_viridis() +
-  labs(y = "log chlorophyll", x = "Mean Weekly Water Temperature (°C)", title = "Downstream") +
-  theme_bw() +
-    theme(strip.text = element_text(size = 13)))
+# arrange the predictions in a grid.size x grid.size matrix ready to display as an image
+# create a matrix to hold the value
+chl.mat.none = matrix(data = NA, nrow = grid.size+1, ncol = grid.size+1)
+chl.mat.shrt = matrix(data = NA, nrow = grid.size+1, ncol = grid.size+1)
+chl.mat.long = matrix(data = NA, nrow = grid.size+1, ncol = grid.size+1)
+
+rownames(chl.mat.none) = seq.none.lqsdy
+colnames(chl.mat.none) = seq.none.wtmwk
+rownames(chl.mat.shrt) = seq.none.lqsdy
+colnames(chl.mat.shrt) = seq.none.wtmwk
+rownames(chl.mat.long) = seq.none.lqsdy
+colnames(chl.mat.long) = seq.none.wtmwk
+
+for (i in 1:(grid.size+1)) {
+  for (j in 1:(grid.size+1)) {
+    pred.none = predict_gam(gamd6b, values = list(log_qsdy = seq.none.lqsdy[i], WTmwk = seq.none.wtmwk[j], inund_fac2 = "none"))
+    pred.shrt = predict_gam(gamd6b, values = list(log_qsdy = seq.shrt.lqsdy[i], WTmwk = seq.shrt.wtmwk[j], inund_fac2 = "short"))
+    pred.long = predict_gam(gamd6b, values = list(log_qsdy = seq.long.lqsdy[i], WTmwk = seq.long.wtmwk[j], inund_fac2 = "long"))
+    chl.mat.none[i, j] = pred.none$fit
+    chl.mat.shrt[i, j] = pred.shrt$fit
+    chl.mat.long[i, j] = pred.long$fit
+  }
+}
+
+col_range = colorRampPalette(c("rosybrown4", "darkred", "tomato1", "gray85", "steelblue1", "royalblue", "royalblue3", "darkblue", "purple4"))
+col_pal = col_range(10000)
+
+# this is a way to make a single palette across all 3 panels
+# image(x = seq.none.lqsdy, y = seq.none.wtmwk, z = chl.mat.none,
+#       col = col_pal[round(min(chl.mat.none)*length(col_pal)):round(max(chl.mat.none)*length(col_pal))],
+#       ylab = "", xlab = "", axes = F, ylim = range(seq.none.wtmwk), xlim = range(seq.none.lqsdy))
+# image(x = seq.shrt.lqsdy, y = seq.shrt.wtmwk, z = chl.mat.shrt,
+#       col = col_pal[round(min(chl.mat.shrt)*length(col_pal)):round(max(chl.mat.shrt)*length(col_pal))],
+#       ylab = "", xlab = "", axes = F, ylim = range(seq.shrt.wtmwk), xlim = range(seq.shrt.lqsdy))
+# image(x = seq.long.lqsdy, y = seq.long.wtmwk, z = chl.mat.long,
+#       col = col_pal[round(min(chl.mat.long)*length(col_pal)):round(max(chl.mat.long)*length(col_pal))],
+#       ylab = "", xlab = "", axes = F, ylim = range(seq.long.wtmwk), xlim = range(seq.long.lqsdy))
+
+# calculating axes labels
+lbl.none.lqsdy = round(seq(d_table[2,2], d_table[2,3], by = (d_table[2,3] - d_table[2,2])/5), digits = 2)
+lbl.none.wtmwk = round(seq(d_table[2,4], d_table[2,5], by = (d_table[2,5] - d_table[2,4])/5), digits = 2)
+lbl.shrt.lqsdy = round(seq(d_table[3,2], d_table[3,3], by = (d_table[3,3] - d_table[3,2])/5), digits = 2)
+lbl.shrt.wtmwk = round(seq(d_table[3,4], d_table[3,5], by = (d_table[3,5] - d_table[3,4])/5), digits = 2)
+lbl.long.lqsdy = round(seq(d_table[1,2], d_table[1,3], by = (d_table[1,3] - d_table[1,2])/5), digits = 2)
+lbl.long.wtmwk = round(seq(d_table[1,4], d_table[1,5], by = (d_table[1,5] - d_table[1,4])/5), digits = 2)
+
+# subset the downstream data frame each inundation factor
+d.none = downstream %>% filter(inund_fac2 == "none")
+d.shrt = downstream %>% filter(inund_fac2 == "short")
+d.long = downstream %>% filter(inund_fac2 == "long")
+
+# calculate the outer hull coordinates for log_qsdy and WTmwk - gives the relevant row numbers
+cnvx.hull.none = c(chull(d.none$log_qsdy, d.none$WTmwk), chull(d.none$log_qsdy, d.none$WTmwk)[1])
+cnvx.hull.shrt = c(chull(d.shrt$log_qsdy, d.shrt$WTmwk), chull(d.shrt$log_qsdy, d.shrt$WTmwk)[1])
+cnvx.hull.long = c(chull(d.long$log_qsdy, d.long$WTmwk), chull(d.long$log_qsdy, d.long$WTmwk)[1])
+
+# subset to only the hull rows
+d.none.hull = d.none[cnvx.hull.none,] %>% 
+  mutate(log_qsdy = ifelse(log_qsdy < d_table[2,2], d_table[2,2], ifelse(log_qsdy > d_table[2,3], d_table[2,3], log_qsdy))) %>%
+  mutate(WTmwk = ifelse(WTmwk < d_table[2,4], d_table[2,4], ifelse(WTmwk > d_table[2,5], d_table[2,5], WTmwk)))
+d.shrt.hull = d.none[cnvx.hull.shrt,] %>% 
+  mutate(log_qsdy = ifelse(log_qsdy < d_table[3,2], d_table[3,2], ifelse(log_qsdy > d_table[3,3], d_table[3,3], log_qsdy))) %>%
+  mutate(WTmwk = ifelse(WTmwk < d_table[3,4], d_table[3,4], ifelse(WTmwk > d_table[3,5], d_table[3,5], WTmwk)))
+d.long.hull = d.none[cnvx.hull.long,] %>% 
+  mutate(log_qsdy = ifelse(log_qsdy < d_table[1,2], d_table[1,2], ifelse(log_qsdy > d_table[1,3], d_table[1,3], log_qsdy))) %>%
+  mutate(WTmwk = ifelse(WTmwk < d_table[1,4], d_table[1,4], ifelse(WTmwk > d_table[1,5], d_table[1,5], WTmwk)))
+
+# this way maximizes contrast within each panel hence the scale within category is stretched
+# par(mfrow = c(1,3), mar = c(4,2.75,1,2.5) + 0.1, oma = c(0,2.25,2,8), las = 1)
+
+###-------------- Downstream: No inundation --------------###
+png(filename = "figures/d_none_2dfigure.png", width = 8, height = 6, units = "in", res = 300)
+
+image(x = seq.none.lqsdy, y = seq.none.wtmwk, z = chl.mat.none, col = col_pal,
+      ylab = "", xlab = "", axes = F, ylim = range(seq.none.wtmwk), xlim = range(seq.none.lqsdy))
+
+# create breaks and labels for x and y axes
+axis(side = 1, at = lbl.none.lqsdy, labels = lbl.none.lqsdy)
+axis(side = 2, at = lbl.none.wtmwk, labels = lbl.none.wtmwk)
+
+# draw the simple polygon where data exists
+#polygon(x = d.none.hull$log_qsdy, y = d.none.hull$WTmwk, col = gray(1, 0.2), border = NA)
+
+mtext(text = "Log of same day flow", side = 1,
+      line = 2.5, adj=0.5, las=0)
+mtext(text = "Weekly mean water temperature", side = 2,
+      line = 3, adj=0.5, las=0)
+mtext(text = "Downstream: No inundation", side = 3,
+      line = 0.75, adj=0.5, las=0, font=2)
+
 dev.off()
+
+###--------- Downstream: short inundation (< 3 weeks) ---------###
+png(filename = "figures/d_shrt_2dfigure.png", width = 8, height = 6, units = "in", res = 300)
+
+image(x = seq.shrt.lqsdy, y = seq.shrt.wtmwk, z = chl.mat.shrt, col = col_pal,
+      ylab = "", xlab = "", axes = F, ylim = range(seq.shrt.wtmwk), xlim = range(seq.shrt.lqsdy))
+
+# create breaks and labels for x and y axes
+axis(side = 1, at = lbl.shrt.lqsdy, labels = lbl.shrt.lqsdy)
+axis(side = 2, at = lbl.shrt.wtmwk, labels = lbl.shrt.wtmwk)
+
+mtext(text = "Log of same day flow", side = 1,
+      line = 2.5, adj=0.5, las=0)
+mtext(text = "Weekly mean water temperature", side = 2,
+      line = 3, adj=0.5, las=0)
+mtext(text = "Downstream: short inundation", side = 3,
+      line = 0.75, adj=0.5, las=0, font=2)
+
+dev.off()
+
+# draw the simple polygon where data exists
+polygon(x = d.shrt.hull$log_qsdy, y = d.shrt.hull$WTmwk, col = gray(1, 0.2), border = NA)
+
+###--------- Downstream: long inundation (> 3 weeks) ---------###
+png(filename = "figures/d_long_2dfigure.png", width = 8, height = 6, units = "in", res = 300)
+
+image(x = seq.long.lqsdy, y = seq.long.wtmwk, z = chl.mat.long, col = col_pal,
+      ylab = "", xlab = "", axes = F, ylim = range(seq.long.wtmwk), xlim = range(seq.long.lqsdy))
+
+# create breaks and labels for x and y axes
+axis(side = 1, at = lbl.long.lqsdy, labels = lbl.long.lqsdy)
+axis(side = 2, at = lbl.long.wtmwk, labels = lbl.long.wtmwk)
+
+mtext(text = "Log of same day flow", side = 1,
+      line = 2.5, adj=0.5, las=0)
+mtext(text = "Weekly mean water temperature", side = 2,
+      line = 3, adj=0.5, las=0)
+mtext(text = "Downstream: long inundation", side = 3,
+      line = 0.75, adj=0.5, las=0, font=2)
+
+dev.off()
+
+
+
+
+# (downstream_plots <- pred_downstream %>%
+#   ggplot(aes(WTmwk, fit, color = log_qsdy)) +
+#   geom_point(size = 0.5) +
+#   geom_smooth() + 
+#   #geom_smooth_ci(WTmwk, size = 1.5) +
+#   facet_wrap(~inund_fac2) +
+#   scale_color_viridis() +
+#   labs(y = "log chlorophyll", x = "Mean Weekly Water Temperature (°C)", title = "Downstream") +
+#   theme_bw() +
+#     theme(strip.text = element_text(size = 13)))
+
+dev.off()
+
 ```
+
+
 
 ```{r}
 # by flow and WT
@@ -390,9 +586,6 @@ pred_gamd6_long %>%
   theme_bw()
 
 
-
-
-
 down_long <- pred_gamd6_long %>%
   ggplot(aes(WTmwk, fit, color = log_qsdy)) +
   geom_point() +
@@ -404,10 +597,6 @@ down_long <- pred_gamd6_long %>%
 
 # Long: Flow is dominant factor
 # Short: At high temps
-
-
-
-
 
 
 # limited data by WT divisions
